--- a/docs/content/2.setup.md
+++ b/docs/content/2.setup.md
@@ -22,15 +22,6 @@ npm install @nuxtjs/supabase --save-dev
 
 ::
 
-If you want latest updates, please use `@nuxtjs/supabase-edge` in your `package.json`:
-
-```json [package.json]
-{
-  "devDependencies": {
-    "@nuxtjs/supabase": "npm:@nuxtjs/supabase-edge@latest"
-  }
-}
-```
 ## Configure
 Then, add `@nuxtjs/supabase` to the `buildModules` section of `nuxt.config.js`:
 ```ts [nuxt.config.ts]
@@ -41,3 +32,43 @@ export default {
   }
 }
 ```
+
+## Options
+
+### `url`
+
+- Default: `process.env.SUPABASE_URL` (ex: https://example.supabase.co)
+
+The unique Supabase URL which is supplied when you create a new project in your project dashboard.
+
+Environment variable `SUPABASE_URL` can be used to set `url`.
+
+### `key`
+
+- Default: `process.env.SUPABASE_KEY`
+
+The unique Supabase Key which is supplied when you create a new project in your project dashboard.
+
+Environment variable `SUPABASE_URL` can be used to set `key`.
+
+### `options`
+
+- Default: `{}`
+
+Supabase client options [available here](https://github.com/supabase/supabase-js/blob/master/src/lib/types.ts#L10).
+
+## Edge channel
+
+To use the latest updates pushed on the [`dev`](https://github.com/nuxt-community/supabase-module/tree/dev) branch, you can use `@nuxtjs/supabase-edge`.
+
+Update your `package.json` to the following:
+
+```json [package.json]
+{
+  "devDependencies": {
+    "@nuxtjs/supabase": "npm:@nuxtjs/supabase-edge@latest"
+  }
+}
+```
+
+Then run `npm install` or `yarn install`.
