doc(app): Downgrade to docus 0.5

--- a/docs/pages/1.index.md
+++ b/docs/pages/1.index.md
@@ -1,7 +1,6 @@
 ---
 title: Introduction
 description: '@nuxtjs/supabase is a Nuxt 3 module for first class integration with Supabase.'
-template: docs
 ---
 
 # Introduction
@@ -12,8 +11,13 @@ template: docs
 
 This module is a wrapper around [Supabase](https://supabase.com/) for [Nuxt 3](https://v3.nuxtjs.org).
 ## Features
+
+<list>
+
 - Nuxt 3 ready
+- Vue 3 composables
 - Authentication support
-- Handle errors with hooks (TODO)
+- Use [supabase-js](https://github.com/supabase/supabase-js/) isomorphic client
 - TypeScript support
 
+</list>
