--- a/docs/pages/2.setup.md
+++ b/docs/pages/2.setup.md
@@ -1,6 +1,6 @@
 ---
 title: Setup
-description: 'Learn how to setup Supabase module in your Nuxt 3 application.'
+description: Learn how to setup Supabase module in your Nuxt 3 application.
 ---
 
 # Setup
@@ -10,17 +10,23 @@ Check the [Nuxt 3 documentation](https://v3.nuxtjs.org/docs/directory-structure/
 
 Add `@nuxtjs/supabase` dev dependency to your project:
 
-::code-group
+<code-group>
+  <code-block label="Yarn" active>
 
-```bash [Yarn]
+```bash
 yarn add --dev @nuxtjs/supabase
 ```
 
-```bash [NPM]
+  </code-block>
+  <code-block label="NPM">
+
+```bash
 npm install @nuxtjs/supabase --save-dev
 ```
 
-::
+  </code-block>
+</code-group>
+
 
 ## Configure
 Then, add `@nuxtjs/supabase` to the `buildModules` section of `nuxt.config.js`:
