--- a/docs/pages/4.usage.md
+++ b/docs/pages/4.usage.md
@@ -1,6 +1,6 @@
 ---
 title: Usage
-description: 'Learn how to use the Supabase module in your Nuxt 3 application.'
+description: Learn how to use the Supabase module in your Nuxt 3 application.
 ---
 
 # Usage
@@ -23,7 +23,7 @@ const user = useSupabaseUser()
 
 This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives acces to the [Supabase client](https://supabase.com/docs/reference/javascript/supabase-client).
 
-### `auth`
+### `Auth`
 
 All authentification methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/auth-signup) Documentation.
 
