--- a/docs/pages/5.advanced.md
+++ b/docs/pages/5.advanced.md
@@ -1,6 +1,6 @@
 ---
 title: Advanced
-description: 'Real-life advanced usages of the supabase module.'
+description: Real-life advanced usages of the supabase module.
 ---
 
 # Advanced
