--- a/docs/pages/2.setup.md
+++ b/docs/pages/2.setup.md
@@ -57,7 +57,7 @@ The unique Supabase Key which is supplied when you create a new project in your 
 
 Environment variable `SUPABASE_URL` can be used to set `key`.
 
-### `options`
+### `client`
 
 - Default: `{}`
 
