chore(docs): improvements

--- a/docs/pages/1.index.md
+++ b/docs/pages/1.index.md
@@ -1,23 +1,18 @@
 ---
 title: Introduction
-description: '@nuxtjs/supabase is a Nuxt 3 module for first class integration with Supabase.'
+description: '@nuxtjs/supabase is a Nuxt module for first class integration with Supabase.'
 ---
 
-# Introduction
+This module is a wrapper around [Supabase](https://supabase.com/) for [Nuxt](https://v3.nuxtjs.org).
 
-@nuxtjs/supabase is a Nuxt 3 module for first class integration with Supabase.
-
----
-
-This module is a wrapper around [Supabase](https://supabase.com/) for [Nuxt 3](https://v3.nuxtjs.org).
 ## Features
 
 <list>
 
-- Nuxt 3 ready
+- Nuxt 3+ ready
 - Vue 3 composables
 - Authentication support
-- Use [supabase-js](https://github.com/supabase/supabase-js/) isomorphic client
+- Use supabase-js isomorphic client
 - TypeScript support
 
 </list>
