docs(usage): fix typo

--- a/docs/pages/4.usage.md
+++ b/docs/pages/4.usage.md
@@ -41,7 +41,7 @@ watchEffect(() => {
 })
 
 // Login method using providers
-const login = async (provider: 'github', 'google' | 'gitlab' | 'bitbucket') => {
+const login = async (provider: 'github' | 'google' | 'gitlab' | 'bitbucket') => {
   const { error } = await client.auth.signIn(authParams)
 
   if (error) {
