fix(doc): update and fix

--- a/docs/pages/2.setup.md
+++ b/docs/pages/2.setup.md
@@ -29,7 +29,7 @@ npm install @nuxtjs/supabase --save-dev
 ## Configure
 Then, add `@nuxtjs/supabase` to the `buildModules` section of `nuxt.config.js`:
 ```ts [nuxt.config.ts]
-export default {
+export default defineNuxtConfig({
   buildModules: ['@nuxtjs/supabase'],
   supabase: {
     // Options
@@ -61,18 +61,3 @@ Environment variable `SUPABASE_URL` can be used to set `key`.
 
 Supabase client options [available here](https://github.com/supabase/supabase-js/blob/master/src/lib/types.ts#L10).
 
-## Edge channel
-
-To use the latest updates pushed on the [`dev`](https://github.com/nuxt-community/supabase-module/tree/dev) branch, you can use `@nuxtjs/supabase-edge`.
-
-Update your `package.json` to the following:
-
-```json [package.json]
-{
-  "devDependencies": {
-    "@nuxtjs/supabase": "npm:@nuxtjs/supabase-edge@latest"
-  }
-}
-```
-
-Then run `npm install` or `yarn install`.
