--- a/docs/pages/4.usage.md
+++ b/docs/pages/4.usage.md
@@ -5,18 +5,6 @@ description: Learn how to use the Supabase module in your Nuxt 3 application.
 
 This module exposes composables that are [auto-imported](https://v3.nuxtjs.org/docs/directory-structure/composables) by Nuxt 3.
 
-## `useSupabaseUser`
-
-Once logged in, you can access your user everywhere:
-
-```vue
-<script setup>
-const user = useSupabaseUser()
-</script>
-```
-
-> Learn how to protect your routes by writing your own [auth middleware composable](/advanced#auth-middleware).
-
 ## `useSupabaseClient`
 
 This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives acces to the [Supabase client](https://supabase.com/docs/reference/javascript/supabase-client).
@@ -42,7 +30,7 @@ watchEffect(() => {
 
 // Login method using providers
 const login = async (provider: 'github' | 'google' | 'gitlab' | 'bitbucket') => {
-  const { error } = await client.auth.signIn(authParams)
+  const { error } = await client.auth.signIn(provider)
 
   if (error) {
     alert('Something went wrong !')
@@ -77,3 +65,15 @@ const { data: { value: { data: restaurant } } } = await useAsyncData('restaurant
 })
 </script>
 ```
+
+## `useSupabaseUser`
+
+Once logged in, you can access your user everywhere:
+
+```vue
+<script setup>
+const user = useSupabaseUser()
+</script>
+```
+
+> Learn how to protect your routes by writing your own [auth middleware composable](/advanced#auth-middleware).
