--- a/docs/pages/5.advanced.md
+++ b/docs/pages/5.advanced.md
@@ -8,40 +8,22 @@ description: Real-life advanced usages of the supabase module.
 You can protect your authenticated routes by creating a custom composable in your project, here is an example:
 
 ```ts [composables/useAuthMiddleware.ts]
-export const useAuthMiddleware = () => {
-  const router = useRouter()
-  const user = useSupabaseUser()
-  const { ssrContext } = useNuxtApp()
-
-  const redirect = (path: string) => {
-    if (ssrContext) { // Server side
-      ssrContext.res.writeHead(302, { Location: path })
-      ssrContext.res.end()
-    } else { // Client side
-      watchEffect(() => {
-        router.push(path)
-      })
-    }
-  }
-
+export default defineNuxtRouteMiddleware((to, _from) => {
+  const user = useStrapiUser()
   if (!user.value) {
-    return redirect('/login')
+    useCookie('redirect', { path: '/' }).value = to.fullPath
+    return navigateTo('/login')
   }
-}
+})
 ```
 
-You can then protect your pages just by calling this composable:
+Don't forget to reference your middleware in your page with:
 
-```vue [pages/dashboard.vue]
-<script setup>
-useAuthMiddleware()
-
-const user = useSupabaseUser()
-</script>
+```ts [pages/my-page.vue]
+definePageMeta({
+  middleware: 'auth'
+})
 ```
 
 > Remember, your composables are [auto-imported](https://v3.nuxtjs.org/docs/directory-structure/composables) by Nuxt 3.
 
-## Errors handling
-
-TODO
