--- a/docs/pages/5.advanced.md
+++ b/docs/pages/5.advanced.md
@@ -7,9 +7,10 @@ description: Real-life advanced usages of the supabase module.
 
 You can protect your authenticated routes by creating a custom composable in your project, here is an example:
 
-```ts [middleware/useAuthMiddleware.ts]
+```ts [middleware/auth.ts]
 export default defineNuxtRouteMiddleware((to, _from) => {
-  const user = useStrapiUser()
+  const user = useSupabaseUser()
+
   if (!user.value) {
     useCookie('redirect', { path: '/' }).value = to.fullPath
     return navigateTo('/login')
@@ -17,11 +18,13 @@ export default defineNuxtRouteMiddleware((to, _from) => {
 })
 ```
 
-Don't forget to reference your middleware in your page with:
+Then you can reference your middleware in your page with:
 
 ```ts [pages/my-page.vue]
 definePageMeta({
   middleware: 'auth'
 })
 ```
+
+Learn more about [Nuxt middleware](https://v3.nuxtjs.org/docs/directory-structure/middleware).
 
