docs: prepare it

--- a/docs/pages/1.index.md
+++ b/docs/pages/1.index.md
@@ -3,8 +3,6 @@ title: Introduction
 description: '@nuxtjs/supabase is a Nuxt module for first class integration with Supabase.'
 ---
 
-This module is a wrapper around [Supabase](https://supabase.com/) for [Nuxt](https://v3.nuxtjs.org).
-
 ## Features
 
 <list>
@@ -16,3 +14,82 @@ This module is a wrapper around [Supabase](https://supabase.com/) for [Nuxt](htt
 - TypeScript support
 
 </list>
+<br>
+
+Checkout the [Nuxt 3](https://v3.nuxtjs.org) documentation and [Supabase](https://supabase.com) to learn more them.
+
+## Installation
+
+Add `@nuxtjs/supabase` dev dependency to your project:
+
+<code-group>
+  <code-block label="Yarn" active>
+
+```bash
+yarn add --dev @nuxtjs/supabase
+```
+
+  </code-block>
+  <code-block label="NPM">
+
+```bash
+npm install @nuxtjs/supabase --save-dev
+```
+
+  </code-block>
+</code-group>
+
+Then, add `@nuxtjs/supabase` to the `modules` section of `nuxt.config.js`:
+
+```ts [nuxt.config.ts]
+import { defineNuxtConfig } from 'nuxt3'
+
+export default defineNuxtConfig({
+  modules: ['@nuxtjs/supabase'],
+})
+```
+
+Lastly, add `SUPABASE_URL` and `SUPABASE_KEY` to the `.env`:
+
+```bash [.env]
+SUPABASE_URL="https://example.supabase.com"
+SUPABASE_KEY="<your_key>"
+```
+
+## Options
+
+You can configure the supabase module by using the `supabase` key in `nuxt.config`: 
+
+```ts [nuxt.config.ts]
+import { defineNuxtConfig } from 'nuxt3'
+
+export default defineNuxtConfig({
+  // ...
+  supabase: {
+    // Options
+  }
+}
+```
+
+### `url`
+
+- Default: `process.env.SUPABASE_URL` (ex: https://example.supabase.co)
+
+The unique Supabase URL which is supplied when you create a new project in your project dashboard.
+
+Environment variable `SUPABASE_URL` can be used to set `url`.
+
+### `key`
+
+- Default: `process.env.SUPABASE_KEY`
+
+The unique Supabase Key which is supplied when you create a new project in your project dashboard.
+
+Environment variable `SUPABASE_URL` can be used to set `key`.
+
+### `client`
+
+- Default: `{}`
+
+Supabase client options [available here](https://github.com/supabase/supabase-js/blob/master/src/lib/types.ts#L10).
+
