--- a/docs/pages/2.usage.md
+++ b/docs/pages/2.usage.md
@@ -9,6 +9,14 @@ This module exposes composables that are [auto-imported](https://v3.nuxtjs.org/d
 
 This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives acces to the [Supabase client](https://supabase.com/docs/reference/javascript/supabase-client).
 
+```vue [pages/index.vue]
+<script setup>
+const client = useSupabaseClient()
+
+// Example: client.from('librairies').eq('name', 'Vue').single()
+</script>
+```
+
 ### `Auth`
 
 All authentification methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/auth-signup) Documentation.
@@ -21,23 +29,21 @@ const user = useSupabaseUser()
 const client = useSupabaseClient()
 const router = useRouter()
 
-// Watch on user value, redirect to account page if exists
-watchEffect(() => {
-  if (user.value) {
-    router.push('/account')
-  }
-})
-
 // Login method using providers
 const login = async (provider: 'github' | 'google' | 'gitlab' | 'bitbucket') => {
   const { error } = await client.auth.signIn(provider)
 
   if (error) {
-    alert('Something went wrong !')
+    return alert('Something went wrong !')
   }
+
+  router.push('/dashboard')
 }
 </script>
 
+<template>
+  <button @click="login('github')">Login with GitHub</button>
+</template>
 ```
 
 <alert type="info">
@@ -45,6 +51,8 @@ const login = async (provider: 'github' | 'google' | 'gitlab' | 'bitbucket') => 
 Thanks to the [Nuxt plugin](https://v3.nuxtjs.org/docs/directory-structure/plugins), we are listening to the [onAuthStateChange](https://supabase.com/docs/reference/javascript/auth-onauthstatechange) listener in order to update the user value according to the received event. We also keep the session consistency between client and server side.   
 
 </alert>
+
+Take a look at the [advanced](/advanced) section to learn how to leverage Nuxt middleware to protect your routes for unauthenticated users.
 
 ### `Database`
 
