--- a/docs/pages/3.advanced.md
+++ b/docs/pages/3.advanced.md
@@ -12,7 +12,6 @@ export default defineNuxtRouteMiddleware((to, _from) => {
   const user = useSupabaseUser()
 
   if (!user.value) {
-    useCookie('redirect', { path: '/' }).value = to.fullPath
     return navigateTo('/login')
   }
 })
@@ -20,11 +19,11 @@ export default defineNuxtRouteMiddleware((to, _from) => {
 
 Then you can reference your middleware in your page with:
 
-```ts [pages/my-page.vue]
+```ts [pages/dashboard.vue]
 definePageMeta({
   middleware: 'auth'
 })
 ```
 
-Learn more about [Nuxt middleware](https://v3.nuxtjs.org/docs/directory-structure/middleware).
+Learn more about [Nuxt middleware](https://v3.nuxtjs.org/docs/directory-structure/middleware) and [definePageMeta](https://v3.nuxtjs.org/docs/directory-structure/pages#page-metadata).
 
