--- a/docs/pages/1.index.md
+++ b/docs/pages/1.index.md
@@ -18,6 +18,10 @@ description: '@nuxtjs/supabase is a Nuxt module for first class integration with
 
 Checkout the [Nuxt 3](https://v3.nuxtjs.org) documentation and [Supabase](https://supabase.com) to learn more them.
 
+## Demo
+
+Checkout a live demo on https://n3-supabase.netlify.app ([source code](https://github.com/nuxt-community/supabase-module/tree/main/demo)).
+
 ## Installation
 
 Add `@nuxtjs/supabase` dev dependency to your project:
