docs: update demo icon

--- a/docs/pages/4.demo.md
+++ b/docs/pages/4.demo.md
@@ -3,7 +3,7 @@ title: Demo
 description: Demonstration of using Supabse with Nuxt.
 ---
 
-[![n3-supabase-demo](https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png)](https://n3-supabase.netlify.app)
+[![n3-supabase-demo](/demo.png)](https://n3-supabase.netlify.app)
 
 ## Live demo
 
