--- a/docs/pages/1.index.md
+++ b/docs/pages/1.index.md
@@ -22,7 +22,7 @@ Checkout the [Nuxt 3](https://v3.nuxtjs.org) documentation and [Supabase](https:
 
 A live demo is made for see this module in action on [n3-supabase.netlify.app](https://n3-supabase.netlify.app), read more in the [demo section](/demo).
 
-[![n3-supabase-demo](https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png)](https://n3-supabase.netlify.app)
+[![n3-supabase-demo](/demo.png)](https://n3-supabase.netlify.app)
 
 ## Installation
 
