--- a/docs/pages/1.index.md
+++ b/docs/pages/1.index.md
@@ -24,6 +24,8 @@ A live demo is made for see this module in action on [n3-supabase.netlify.app](h
 
 <a href="https://n3-supabase.netlify.app" target="_blank"><img src="https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png" alt="Supabase demo with Nuxt 3" /></a>
 
+Also checkout the [YouTube video](https://www.youtube.com/watch?v=jIyiRT6zT8Q) about its usage in a live demo.
+
 ## Installation
 
 Add `@nuxtjs/supabase` dev dependency to your project:
