docs: add link to Nuxt 2 version

--- a/docs/pages/1.index.md
+++ b/docs/pages/1.index.md
@@ -18,6 +18,12 @@ description: '@nuxtjs/supabase is a Nuxt module for first class integration with
 
 Checkout the [Nuxt 3](https://v3.nuxtjs.org) documentation and [Supabase](https://supabase.com) to learn more them.
 
+<alert>
+
+For integrating Supabase with Nuxt 2, checkout [supabase-community/nuxt-supabase](https://github.com/supabase-community/nuxt-supabase).
+
+</alert>
+
 ## Demo
 
 A live demo is made for see this module in action on [n3-supabase.netlify.app](https://n3-supabase.netlify.app), read more in the [demo section](/demo).
