docs: improve code example

--- a/docs/pages/2.usage.md
+++ b/docs/pages/2.usage.md
@@ -65,11 +65,10 @@ Here is an example of a fetch using the `select` method with Nuxt 3 [useAsyncDat
 const user = useSupabaseUser()
 const client = useSupabaseClient()
 
-const { data: { value: { data: restaurant } } } = await useAsyncData('restaurant', async () => {
-  return await client.from('restaurants')
-    .select('name, location')
-    .eq('name', 'My Restaurant Name')
-    .single()
+const { data: restaurant } } = await useAsyncData('restaurant', async () => {
+  const { data } = await client.from('restaurants').select('name, location').eq('name', 'My Restaurant Name').single()
+
+  return data
 })
 </script>
 ```
