chore(demo): upgrade to nuxt rc

--- a/docs/pages/1.index.md
+++ b/docs/pages/1.index.md
@@ -56,7 +56,7 @@ npm install @nuxtjs/supabase --save-dev
 Then, add `@nuxtjs/supabase` to the `modules` section of `nuxt.config.js`:
 
 ```ts [nuxt.config.ts]
-import { defineNuxtConfig } from 'nuxt3'
+import { defineNuxtConfig } from 'nuxt'
 
 export default defineNuxtConfig({
   modules: ['@nuxtjs/supabase'],
@@ -75,7 +75,7 @@ SUPABASE_KEY="<your_key>"
 You can configure the supabase module by using the `supabase` key in `nuxt.config`: 
 
 ```ts [nuxt.config.ts]
-import { defineNuxtConfig } from 'nuxt3'
+import { defineNuxtConfig } from 'nuxt'
 
 export default defineNuxtConfig({
   // ...
