--- a/docs/pages/2.usage.md
+++ b/docs/pages/2.usage.md
@@ -3,9 +3,11 @@ title: Usage
 description: Learn how to use the Supabase module in your Nuxt 3 application.
 ---
 
-This module exposes composables that are [auto-imported](https://v3.nuxtjs.org/docs/directory-structure/composables) by Nuxt 3.
+## Vue composables
 
-## `useSupabaseClient`
+This module provides composables to use inside vour `vue` files. Those exposed composables are [auto-imported](https://v3.nuxtjs.org/docs/directory-structure/composables) by Nuxt 3.
+
+### `useSupabaseClient`
 
 This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives acces to the [Supabase client](https://supabase.com/docs/reference/javascript/supabase-client).
 
@@ -17,7 +19,9 @@ const client = useSupabaseClient()
 </script>
 ```
 
-### `Auth`
+<br>
+
+ 1. Authentification
 
 All authentification methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/auth-signup) Documentation.
 
@@ -54,7 +58,9 @@ Thanks to the [Nuxt plugin](https://v3.nuxtjs.org/docs/directory-structure/plugi
 
 Take a look at the [advanced](/advanced) section to learn how to leverage Nuxt middleware to protect your routes for unauthenticated users.
 
-### `Database`
+<br>
+
+ 2. Database Request
 
 Please check [Supabase](https://supabase.com/docs/reference/javascript/select) documentation to fully use the power of Supabase client.
 
@@ -73,7 +79,7 @@ const { data: restaurant } } = await useAsyncData('restaurant', async () => {
 </script>
 ```
 
-## `useSupabaseUser`
+### `useSupabaseUser`
 
 Once logged in, you can access your user everywhere:
 
@@ -84,3 +90,56 @@ const user = useSupabaseUser()
 ```
 
 > Learn how to protect your routes by writing your own [auth middleware composable](/advanced#auth-middleware).
+
+## Server routes services
+
+> This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine#standalone-server), the server engine powered by Nuxt.
+
+In order to provide utilities similar to `vue` composables (see first section) in [server routes](https://v3.nuxtjs.org/guide/features/server-routes/), this module exposes services providing the same functionnalities.
+
+### `serverSupabaseClient`
+
+This function is working similary as the [useSupabaseClient](/usage#usesupabaseclient) composable but can be used in server routes.
+
+Define your server route and just use the `serverSupabaseClient` like:
+
+```ts [server/api/librairies.ts]
+export default eventHandler(async (event) => {
+  const client = serverSupabaseClient(event)
+
+  const { data } = client.from('librairies').select('name')
+
+  return { librairies: data }
+})
+```
+
+Then call your api route from any vue file:
+
+```ts [pages/index.vue]
+const callSupabaseClientInServerRoute = async () => {
+  const { librairies } = await $fetch('/api/librairies')
+}
+```
+
+### `serverSupabaseUser`
+
+This function is working similary as the [useSupabaseUser](/usage#usesupabaseuser) composable but can be used in server routes.
+
+Define your server route and just use the `serverSupabaseUser` like:
+
+```ts [server/api/me.ts]
+export default eventHandler(async (event) => {
+  const user = await serverSupabaseUser(event)
+
+  return { user }
+})
+```
+
+Then call your api route from any vue file:
+
+
+```ts [pages/index.vue]
+const getSupabaseUserFromServerRoute = async () => {
+  const { user } = await $fetch('/api/me')
+}
+```
