docs: improve code example

--- a/docs/pages/2.usage.md
+++ b/docs/pages/2.usage.md
@@ -35,7 +35,7 @@ const router = useRouter()
 
 // Login method using providers
 const login = async (provider: 'github' | 'google' | 'gitlab' | 'bitbucket') => {
-  const { error } = await client.auth.signIn(provider)
+  const { error } = await client.auth.signIn({ provider })
 
   if (error) {
     return alert('Something went wrong !')
