refactor(docs): use nuxt content with docus theme

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -3,55 +3,29 @@ title: Introduction
 description: '@nuxtjs/supabase is a Nuxt module for first class integration with Supabase.'
 ---
 
-## Features
+# Introduction
 
-<list>
+`@nuxtjs/supabase` is a Nuxt module for first class integration with Supabase.
 
-- Nuxt 3+ ready
-- Vue 3 composables
-- Authentication support
-- Use supabase-js isomorphic client
-- TypeScript support
+Checkout the [Nuxt 3](https://v3.nuxtjs.org) documentation and [Supabase](https://supabase.com) to learn more.
 
-</list>
-<br>
-
-Checkout the [Nuxt 3](https://v3.nuxtjs.org) documentation and [Supabase](https://supabase.com) to learn more them.
-
-<alert>
-
+::alert
 For integrating Supabase with Nuxt 2, checkout [supabase-community/nuxt-supabase](https://github.com/supabase-community/nuxt-supabase).
-
-</alert>
-
-## Demo
-
-A live demo is made for see this module in action on [n3-supabase.netlify.app](https://n3-supabase.netlify.app), read more in the [demo section](/demo).
-
-<a href="https://n3-supabase.netlify.app" target="_blank"><img src="https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png" alt="Supabase demo with Nuxt 3" /></a>
-
-Also checkout the [YouTube video](https://www.youtube.com/watch?v=jIyiRT6zT8Q) about its usage in a live demo.
+::
 
 ## Installation
 
 Add `@nuxtjs/supabase` dev dependency to your project:
 
-<code-group>
-  <code-block label="Yarn" active>
-
-```bash
+::code-group
+```bash [yarn]
 yarn add --dev @nuxtjs/supabase
 ```
-
-  </code-block>
-  <code-block label="NPM">
-
-```bash
+```bash [NPM]
 npm install @nuxtjs/supabase --save-dev
-```
-
-  </code-block>
-</code-group>
+``` 
+::
+ 
 
 Then, add `@nuxtjs/supabase` to the `modules` section of `nuxt.config.js`:
 
@@ -65,7 +39,7 @@ export default defineNuxtConfig({
 
 Lastly, add `SUPABASE_URL` and `SUPABASE_KEY` to the `.env`:
 
-```bash [.env]
+```zsh [.env]
 SUPABASE_URL="https://example.supabase.com"
 SUPABASE_KEY="<your_key>"
 ```
@@ -107,3 +81,10 @@ Environment variable `SUPABASE_URL` can be used to set `key`.
 
 Supabase client options [available here](https://github.com/supabase/supabase-js/blob/master/src/lib/types.ts#L10).
 
+## Demo
+
+A live demo is made for see this module in action on [n3-supabase.netlify.app](https://n3-supabase.netlify.app), read more in the [demo section](/demo).
+
+<a href="https://n3-supabase.netlify.app" target="_blank"><img src="https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png" alt="Supabase demo with Nuxt 3" /></a>
+
+Also checkout the [YouTube video](https://www.youtube.com/watch?v=jIyiRT6zT8Q) about its usage in a live demo.
