--- a/docs/content/4.advanced.md
+++ b/docs/content/4.advanced.md
@@ -1,7 +1,11 @@
 ---
 title: Advanced
-description: Real-life advanced usages of the supabase module.
+description: 'Real-life advanced usages of the supabase module.'
 ---
+
+# Advanced
+
+Real-life advanced usages of the supabase module.
 
 ## Auth middleware
 
@@ -26,4 +30,5 @@ definePageMeta({
 ```
 
 Learn more about [Nuxt middleware](https://v3.nuxtjs.org/docs/directory-structure/middleware) and [definePageMeta](https://v3.nuxtjs.org/docs/directory-structure/pages#page-metadata).
+
 
