add docs for using serverSupabaseServiceRoleClient

--- a/docs/pages/1.index.md
+++ b/docs/pages/1.index.md
@@ -63,11 +63,12 @@ export default defineNuxtConfig({
 })
 ```
 
-Lastly, add `SUPABASE_URL` and `SUPABASE_KEY` to the `.env`:
+Lastly, add `SUPABASE_URL`, `SUPABASE_KEY` and `SUPABASE_SERVICE_ROLE_KEY` to the `.env`:
 
 ```bash [.env]
 SUPABASE_URL="https://example.supabase.com"
 SUPABASE_KEY="<your_key>"
+SUPABASE_SERVICE_ROLE_KEY="<your_key>"
 ```
 
 ## Options
@@ -97,9 +98,17 @@ Environment variable `SUPABASE_URL` can be used to set `url`.
 
 - Default: `process.env.SUPABASE_KEY`
 
-The unique Supabase Key which is supplied when you create a new project in your project dashboard.
+The unique public Supabase key which is supplied when you create a new project in your project dashboard.
 
-Environment variable `SUPABASE_URL` can be used to set `key`.
+Environment variable `SUPABASE_KEY` can be used to set `key`.
+
+### `serviceRoleKey`
+
+- Default: `process.env.SUPABASE_SERVICE_ROLE_KEY`
+
+The unique secret Supabase Key which has the ability to bypass [Row Level Security](https://supabase.com/docs/guides/auth/row-level-security).
+
+Environment variable `SUPABASE_SERVICE_ROLE_KEY` can be used to set `serviceRoleKey`.
 
 ### `client`
 
