--- a/docs/pages/2.usage.md
+++ b/docs/pages/2.usage.md
@@ -135,6 +135,25 @@ const { data: { librairies }} = await useFetch('/api/librairies', {
 })
 ```
 
+### `serverSupabaseServiceRoleClient`
+
+Similar to [serverSupabaseClient](/usage#serverSupabaseClient) but uses the service role key provided via the `SUPABASE_SERVICE_ROLE_KEY` environment variable. This client has the ability to bypass [RLS](https://supabase.com/docs/guides/auth/row-level-security)  and should only be used when you want to perform actions not authorized by the currently signed in user or when responding to webhooks where there is no active user session.
+
+Define your server route and just import the `serverSupabaseServiceRoleClient` from `#supabase/server`.
+
+```ts [server/api/librairies.ts]
+import { serverSupabaseServiceRoleClient } from '#supabase/server'
+
+export default eventHandler(async (event) => {
+  const client = serverSupabaseServiceRoleClient(event)
+
+  return await client.from("stripe_customers").create({
+    customer_id: "XYZ",
+    is_subscribed: true
+  })
+})
+```
+
 
 ### `serverSupabaseUser`
 
