docs(usage): add service role client

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -65,15 +65,18 @@ export default defineNuxtConfig({
 
 The unique Supabase URL which is supplied when you create a new project in your project dashboard.
 
-Environment variable `SUPABASE_URL` can be used to set `url`.
-
 ### `key`
 
 - Default: `process.env.SUPABASE_KEY`
 
-The unique Supabase Key which is supplied when you create a new project in your project dashboard.
+Supabase 'anon key', used to bypass the Supabase API gateway and interact with your Supabase database making use of user JWT to apply RLS Policies.
 
-Environment variable `SUPABASE_URL` can be used to set `key`.
+### `serviceKey`
+
+- Default: `process.env.SUPABASE_SERVICE_KEY`
+
+Supabase 'service role key', has super admin rights and can bypass your Row Level Security.
+
 
 ### `client`
 
