--- a/docs/content/3.usage/1.composables.md
+++ b/docs/content/3.usage/1.composables.md
@@ -11,6 +11,8 @@ Learn how to use [auto-imported](https://v3.nuxtjs.org/docs/directory-structure/
 
 This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives acces to the [Supabase client](https://supabase.com/docs/reference/javascript/supabase-client).
 
+> The client is initialized with the `SUPABASE_KEY` you must have in your `.env` file. It establishes the connection with the database and make use of user JWT to apply [RLS Policies](https://supabase.com/docs/learn/auth-deep-dive/auth-row-level-security) implemented in Supabase. If you want to bypass policies, you can use the [serverSupabaseServiceRole](/usage/services#serversupabaseservicerole).
+
 ```vue [pages/index.vue]
 <script setup>
 const client = useSupabaseClient()
@@ -48,11 +50,11 @@ const login = async (provider: 'github' | 'google' | 'gitlab' | 'bitbucket') => 
 </template>
 ```
 
-::alert{type:"info"}
+::alert
 Thanks to the [Nuxt plugin](https://v3.nuxtjs.org/docs/directory-structure/plugins), we are listening to the [onAuthStateChange](https://supabase.com/docs/reference/javascript/auth-onauthstatechange) listener in order to update the user value according to the received event. We also keep the session consistency between client and server side.   
 ::
 
-Take a look at the [advanced](/advanced) section to learn how to leverage Nuxt middleware to protect your routes for unauthenticated users.
+> Take a look at the [advanced](/advanced) section to learn how to leverage Nuxt middleware to protect your routes for unauthenticated users.
 
 ### Database Request
 
