--- a/docs/content/3.usage/1.services.md
+++ b/docs/content/3.usage/1.services.md
@@ -11,7 +11,7 @@ In order to provide utilities similar to `vue` composables in [server routes](ht
 
 ### `serverSupabaseClient`
 
-This function is working similary as the [useSupabaseClient](/usage#usesupabaseclient) composable but is designed to be used in server routes.
+This function is working similary as the [useSupabaseClient](/usage/composables#usesupabaseclient) composable but is designed to be used in server routes.
 
 Define your server route and just import the `serverSupabaseClient` from `#supabase/server`.
 
@@ -21,7 +21,7 @@ import { serverSupabaseClient } from '#supabase/server'
 export default eventHandler(async (event) => {
   const client = serverSupabaseClient(event)
 
-  const { data } = client.from('librairies').select()
+  const { data } = await client.from('librairies').select()
 
   return { librairies: data }
 })
@@ -43,12 +43,41 @@ const { data: { librairies }} = await useFetch('/api/librairies', {
 })
 ```
 
+### `serverSupabaseServiceRole`
+
+This function is designed to work only on server side. 
+
+It works similary as the [serverSupabaseClient](/usage/services#serverSupabaseClient) but it provides a client with super admin rights that can bypass your Row Level Security.
+
+> The client is initialized with the `SUPABASE_SERVICE_KEY` you must have in your `.env` file. Checkout the doc if you want to know more about [Supabase keys](https://supabase.com/docs/learn/auth-deep-dive/auth-deep-dive-jwts#jwts-in-supabase).
+
+Define your server route and just import the `serverSupabaseServiceRole` from `#supabase/server`.
+
+```ts [server/api/bypass-rls.ts]
+import { serverSupabaseServiceRole } from '#supabase/server'
+
+export default eventHandler(async (event) => {
+  const client = serverSupabaseServiceRole(event)
+
+  const { data } = await client.from('rls-protected-table').select()
+
+  return { sensitiveData: data }
+})
+```
+
+Then call your API route from any vue file:
+
+```ts [pages/index.vue]
+const fetchSensitiveData = async () => {
+  const { sensitiveData } = await useFetch('/api/bypass-rls')
+}
+```
 
 ### `serverSupabaseUser`
 
-This function is working similary as the [useSupabaseUser](/usage#usesupabaseuser) composable but is designed to be used in server routes.
+This function is working similary as the [useSupabaseUser](/usage/composables#usesupabaseuser) composable but is designed to be used in server routes.
 
-Define your server route and just use the `serverSupabaseUser` like:
+Define your server route and import the `serverSupabaseUser` from `#supabase/server`.
 
 ```ts [server/api/me.ts]
 import { serverSupabaseUser } from '#supabase/server'
