docs(home): update title

--- a/docs/content/1.index.md
+++ b/docs/content/1.index.md
@@ -1,5 +1,5 @@
 ---
-title: "Nuxt x Supabase"
+title: "Nuxt module for Supabase"
 description: "Supabase integration for Nuxt."
 navigation: false
 layout: fluid
