docs(home): update description

--- a/docs/content/1.index.md
+++ b/docs/content/1.index.md
@@ -1,6 +1,6 @@
 ---
 title: "Nuxt module for Supabase"
-description: "Supabase integration for Nuxt."
+description: "A supa simple wrapper around supabase-js to enable usage and integration within Nuxt."
 navigation: false
 layout: fluid
 ---
