docs: upgrade `@docus/docs-theme`

--- a/docs/content/1.index.md
+++ b/docs/content/1.index.md
@@ -1,5 +1,5 @@
 ---
-title: "Nuxt module for Supabase"
+title: "Nuxt Supabase"
 description: "A supa simple wrapper around supabase-js to enable usage and integration within Nuxt."
 navigation: false
 layout: fluid
@@ -11,21 +11,23 @@ cta:
   - Get Started
   - /get-started
 secondary:
-  - Star on GitHub
+  - Star on GitHub ->
   - https://github.com/nuxt-community/supabase-module
 snippet: yarn add --dev @nuxtjs/supabase
 ---
 
 #title
-Nuxt module for Supabase.
+Nuxt Supabase
 
-#features
-::list{type="success"}
-- Nuxt 3+ ready
-- Vue 3 composables
-- Authentication support
-- Use supabase-js isomorphic client
-- TypeScript support
-::
-::
+#description
+A supa simple wrapper around [supabase-js](https://github.com/supabase/supabase-js) to enable usage and integration within Nuxt.
 
+#extra
+  ::list{type="success"}
+  - Nuxt 3+ ready
+  - Vue 3 composables
+  - Authentication support
+  - Use supabase-js isomorphic client
+  - TypeScript support
+  ::
+::
