--- a/docs/content/3.usage/1.composables.md
+++ b/docs/content/3.usage/1.composables.md
@@ -3,9 +3,7 @@ title: Vue composables
 description: 'Learn how to use auto-imported composables inside your vue files.'
 ---
 
-# Vue composables
-
-Learn how to use [auto-imported](https://v3.nuxtjs.org/docs/directory-structure/composables) composables inside your `vue` files.
+Checkout the Nuxt3 documentation for [auto-imported composables](https://v3.nuxtjs.org/docs/directory-structure/composables) to learn more.
 
 ## `useSupabaseClient`
 
@@ -51,7 +49,7 @@ const login = async (provider: 'github' | 'google' | 'gitlab' | 'bitbucket') => 
 ```
 
 ::alert
-Thanks to the [Nuxt plugin](https://v3.nuxtjs.org/docs/directory-structure/plugins), we are listening to the [onAuthStateChange](https://supabase.com/docs/reference/javascript/auth-onauthstatechange) listener in order to update the user value according to the received event. We also keep the session consistency between client and server side.   
+Thanks to the [Nuxt plugin](https://v3.nuxtjs.org/docs/directory-structure/plugins), we are listening to the [onAuthStateChange](https://supabase.com/docs/reference/javascript/auth-onauthstatechange) listener in order to update the user value according to the received event. We also keep the session consistency between client and server side.
 ::
 
 > Take a look at the [advanced](/advanced) section to learn how to leverage Nuxt middleware to protect your routes for unauthenticated users.
