docs(index): add service route feature

--- a/docs/content/1.index.md
+++ b/docs/content/1.index.md
@@ -26,6 +26,7 @@ A supa simple wrapper around [supabase-js](https://github.com/supabase/supabase-
   ::list{type="success"}
   - Nuxt 3+ ready
   - Vue 3 composables
+  - Usage in API server routes
   - Authentication support
   - Use supabase-js isomorphic client
   - TypeScript support
