docs: upgrade docus + various fixes

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -22,7 +22,6 @@ npm install @nuxtjs/supabase --save-dev
 ```
 ::
 
-
 Then, add `@nuxtjs/supabase` to the `modules` section of `nuxt.config.js`:
 
 ```ts [nuxt.config.ts]
@@ -84,6 +83,6 @@ Supabase client options [available here](https://github.com/supabase/supabase-js
 
 A live demo is made for see this module in action on [n3-supabase.netlify.app](https://n3-supabase.netlify.app), read more in the [demo section](/demo).
 
-<a href="https://n3-supabase.netlify.app" target="_blank"><img src="https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png" alt="Supabase demo with Nuxt 3" /></a>
+[![Supabase demo with Nuxt 3](https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png)](https://n3-supabase.netlify.app)
 
 Also checkout the [YouTube video](https://www.youtube.com/watch?v=jIyiRT6zT8Q) about its usage in a live demo.
