--- a/docs/content/5.demo.md
+++ b/docs/content/5.demo.md
@@ -2,7 +2,8 @@
 title: Demo
 description: Demonstration of using Supabse with Nuxt.
 ---
-<a href="https://n3-supabase.netlify.app" target="_blank"><img src="https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png" alt="Supabase demo with Nuxt 3" /></a>
+
+[![Supabase demo with Nuxt 3](https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png)](https://n3-supabase.netlify.app)
 
 ## Live demo
 
