--- a/docs/content/3.usage/1.composables.md
+++ b/docs/content/3.usage/1.composables.md
@@ -64,7 +64,7 @@ Here is an example of a fetch using the `select` method with Nuxt 3 [useAsyncDat
 <script setup lang="ts">
 const client = useSupabaseClient()
 
-const { data: restaurant } } = await useAsyncData('restaurant', async () => {
+const { data: restaurant } = await useAsyncData('restaurant', async () => {
   const { data } = await client.from('restaurants').select('name, location').eq('name', 'My Restaurant Name').single()
 
   return data
