--- a/docs/content/4.advanced.md
+++ b/docs/content/4.advanced.md
@@ -40,7 +40,7 @@ onUnmounted(() => {
 
 ## Auth middleware
 
-You can protect your authenticated routes by creating a custom composable in your project, here is an example:
+You can protect your authenticated routes by creating a custom middleware in your project, here is an example:
 
 ```ts [middleware/auth.ts]
 export default defineNuxtRouteMiddleware((to, _from) => {
