docs: update logo & social preview

--- a/docs/content/1.index.md
+++ b/docs/content/1.index.md
@@ -17,13 +17,13 @@ snippet: yarn add --dev @nuxtjs/supabase
 ---
 
 #title
-Nuxt Supabase
+Nuxt [Supabase]{.text-primary-500}
 
 #description
 A supa simple wrapper around [supabase-js](https://github.com/supabase/supabase-js) to enable usage and integration within Nuxt.
 
 #extra
-  ::list{type="success"}
+  ::list
   - Nuxt 3+ ready
   - Vue 3 composables
   - Usage in API server routes
