--- a/docs/content/3.usage/2.services.md
+++ b/docs/content/3.usage/2.services.md
@@ -13,7 +13,7 @@ This function is working similary as the [useSupabaseClient](/usage/composables#
 
 Define your server route and just import the `serverSupabaseClient` from `#supabase/server`.
 
-```ts [server/api/librairies.ts]
+```ts [server/api/libraries.ts]
 import { serverSupabaseClient } from '#supabase/server'
 
 export default eventHandler(async (event) => {
