docs(refactor): reorganize
(cherry picked from commit 637f000ce9ee9a1ba122e22e684a08ed802a0ac4)

--- a/docs/content/1.index.md
+++ b/docs/content/1.index.md
@@ -20,15 +20,15 @@ snippet: yarn add --dev @nuxtjs/supabase
 Nuxt [Supabase]{.text-primary-500}
 
 #description
-A supa simple wrapper around [supabase-js](https://github.com/supabase/supabase-js) to enable usage and integration within Nuxt.
+A supa simple wrapper around [supabase-js](https://github.com/supabase/supabase-js) to enable usage and integration within Nuxt. 
 
 #extra
   ::list
-  - Nuxt 3+ ready
+  - Nuxt 3 ready
   - Vue 3 composables
+  - Supabase-js V2
   - Usage in API server routes
   - Authentication support
-  - Use supabase-js isomorphic client
   - TypeScript support
   ::
 ::
