--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -79,6 +79,12 @@ Supabase 'service role key', has super admin rights and can bypass your Row Leve
 
 Supabase client options [available here](https://github.com/supabase/supabase-js/blob/master/src/lib/types.ts#L10).
 
+## Versions
+
+`0.1.x` versions are wrapped around `supabase-js v1`.
+<br>
+`0.2.x` versions are wrapped around `supabase-js v2`.
+
 ## Demo
 
 A live demo is made for see this module in action on [n3-supabase.netlify.app](https://n3-supabase.netlify.app), read more in the [demo section](/demo).
