--- a/docs/content/3.usage/1.composables/1.use-supabase-client.md
+++ b/docs/content/3.usage/1.composables/1.use-supabase-client.md
@@ -1,15 +1,13 @@
 ---
-title: Vue composables
-description: 'Learn how to use auto-imported composables inside your vue files.'
+title: useSupabaseClient
+description: null
 ---
 
-Checkout the Nuxt3 documentation for [auto-imported composables](https://v3.nuxtjs.org/docs/directory-structure/composables) to learn more.
-
-## `useSupabaseClient`
+[Auto-import](https://v3.nuxtjs.org/docs/directory-structure/composables) your client inside your vue files.
 
 This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives acces to the [Supabase client](https://supabase.com/docs/reference/javascript/supabase-client).
 
-> The client is initialized with the `SUPABASE_KEY` you must have in your `.env` file. It establishes the connection with the database and make use of user JWT to apply [RLS Policies](https://supabase.com/docs/learn/auth-deep-dive/auth-row-level-security) implemented in Supabase. If you want to bypass policies, you can use the [serverSupabaseServiceRole](/usage/services#serversupabaseservicerole).
+> The client is initialized with the `SUPABASE_KEY` you must have in your `.env` file. It establishes the connection with the database and make use of user JWT to apply [RLS Policies](https://supabase.com/docs/learn/auth-deep-dive/auth-row-level-security) implemented in Supabase. If you want to bypass policies, you can use the [serverSupabaseServiceRole](/usage/services/server-supabase-service-role).
 
 ```vue [pages/index.vue]
 <script setup>
@@ -19,7 +17,7 @@ const client = useSupabaseClient()
 </script>
 ```
 
-### Authentification
+## Authentification
 
 All authentification methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/auth-signup) Documentation.
 
@@ -52,9 +50,9 @@ const login = async (provider: 'github' | 'google' | 'gitlab' | 'bitbucket') => 
 Thanks to the [Nuxt plugin](https://v3.nuxtjs.org/docs/directory-structure/plugins), we are listening to the [onAuthStateChange](https://supabase.com/docs/reference/javascript/auth-onauthstatechange) listener in order to update the user value according to the received event. We also keep the session consistency between client and server side.
 ::
 
-> Take a look at the [advanced](/advanced) section to learn how to leverage Nuxt middleware to protect your routes for unauthenticated users.
+> Take a look at the [auth middleware](/usage/composables/use-supabase-user#auth-middleware) section to learn how to leverage Nuxt middleware to protect your routes for unauthenticated users.
 
-### Database Request
+## Database Request
 
 Please check [Supabase](https://supabase.com/docs/reference/javascript/select) documentation to fully use the power of Supabase client.
 
@@ -72,16 +70,37 @@ const { data: restaurant } = await useAsyncData('restaurant', async () => {
 </script>
 ```
 
-<br>
+## Realtime
 
-## `useSupabaseUser`
+Based on [Supabase Realtime](https://github.com/supabase/realtime), listen to changes in your PostgreSQL Database and broadcasts them over WebSockets. 
 
-Once logged in, you can access your user everywhere:
+To enable it, make sure you have turned on the [Real Time API](https://supabase.com/docs/guides/api#realtime-api-1) for your table.
+
+Then, listen to changes directly in your vue page / component:
 
 ```vue
-<script setup>
-const user = useSupabaseUser()
+<script setup lang="ts">
+import type { RealtimeSubscription } from '@supabase/supabase-js'
+
+const client = useSupabaseClient()
+let subscription: RealtimeSubscription
+
+// Fetch collaborators and get the refresh method provided by useAsyncData
+const { data: collaborators, refresh: refreshCollaborators } = await useAsyncData('collaborators', async () => {
+  const { data } = await client.from('collaborators').select('name')
+  return data
+})
+
+// Once page is mounted, listen to changes on the `collaborators` table and refresh collaborators when receiving event
+onMounted(() => {
+  subscription = client.from('collaborators').on('*', () => {
+    refreshCollaborators()
+  }).subscribe()
+})
+
+// Don't forget to unsubscribe when user left the page
+onUnmounted(() => {
+  client.removeSubscription(subscription)
+})
 </script>
 ```
-
-> Learn how to protect your routes by writing your own [auth middleware composable](/advanced#auth-middleware).
