docs(home): supabase v2 coming soon

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -83,7 +83,7 @@ Supabase client options [available here](https://github.com/supabase/supabase-js
 
 `0.1.x` versions are wrapped around `supabase-js v1`.
 <br>
-`0.2.x` versions are wrapped around `supabase-js v2`.
+`0.2.x` versions are wrapped around `supabase-js v2` (coming soon).
 
 ## Demo
 
