docs(v2): update doc

--- a/docs/content-v1/3.usage/1.composables/1.use-supabase-client.md
+++ b/docs/content-v1/3.usage/1.composables/1.use-supabase-client.md
@@ -19,9 +19,9 @@ const client = useSupabaseClient()
 
 ## Authentification
 
-All authentification methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/next/auth-signinwithpassword) Documentation.
+All authentification methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/auth-signup) Documentation.
 
-Here is an example of the login using the `signInWithOAuth` method with [third-party providers](https://supabase.com/docs/reference/javascript/next/auth-signinwithoauth).
+Here is an example of the login using the `signIn` method with [third-party providers](https://supabase.com/docs/reference/javascript/auth-signin#sign-in-using-third-party-providers).
 
 ```vue [pages/login.vue]
 <script setup lang="ts">
@@ -31,7 +31,7 @@ const router = useRouter()
 
 // Login method using providers
 const login = async (provider: 'github' | 'google' | 'gitlab' | 'bitbucket') => {
-  const { error } = await client.auth.signInWithOAuth({ provider })
+  const { error } = await client.auth.signIn({ provider })
 
   if (error) {
     return alert('Something went wrong !')
@@ -80,11 +80,10 @@ Then, listen to changes directly in your vue page / component:
 
 ```vue
 <script setup lang="ts">
-import type { RealtimeChannel } from '@supabase/supabase-js'
+import type { RealtimeSubscription } from '@supabase/supabase-js'
 
 const client = useSupabaseClient()
-
-let realtimeChannel: RealtimeChannel
+let subscription: RealtimeSubscription
 
 // Fetch collaborators and get the refresh method provided by useAsyncData
 const { data: collaborators, refresh: refreshCollaborators } = await useAsyncData('collaborators', async () => {
@@ -94,19 +93,14 @@ const { data: collaborators, refresh: refreshCollaborators } = await useAsyncDat
 
 // Once page is mounted, listen to changes on the `collaborators` table and refresh collaborators when receiving event
 onMounted(() => {
-  // Real time listener for new workouts
-  realtimeChannel = client.channel('public:collaborators').on(
-    'postgres_changes',
-    { event: '*', schema: 'public', table: 'collaborators' },
-    () => refreshCollaborators()
-  )
-
-  realtimeChannel.subscribe()
+  subscription = client.from('collaborators').on('*', () => {
+    refreshCollaborators()
+  }).subscribe()
 })
 
-  // Don't forget to unsubscribe when user left the page
+// Don't forget to unsubscribe when user left the page
 onUnmounted(() => {
-  client.removeChannel(realtimeChannel)
+  client.removeSubscription(subscription)
 })
 </script>
 ```
