--- a/docs/content/1.index.md
+++ b/docs/content/1.index.md
@@ -26,7 +26,7 @@ A supa simple wrapper around [supabase-js](https://github.com/supabase/supabase-
   ::list
   - Nuxt 3 ready
   - Vue 3 composables
-  - Supabase-js V2 (coming soon)
+  - Supabase-js V2
   - Usage in API server routes
   - Authentication support
   - TypeScript support
