--- a/docs/content/3.usage/2.services/1.server-supabase-client.md
+++ b/docs/content/3.usage/2.services/1.server-supabase-client.md
@@ -17,24 +17,24 @@ import { serverSupabaseClient } from '#supabase/server'
 export default eventHandler(async (event) => {
   const client = serverSupabaseClient(event)
 
-  const { data } = await client.from('librairies').select()
+  const { data } = await client.from('libraries').select()
 
-  return { librairies: data }
+  return { libraries: data }
 })
 ```
 
 Then call your API route from any vue file:
 
 ```ts [pages/index.vue]
-const fetchLibrairy = async () => {
-  const { librairies } = await $fetch('/api/librairies')
+const fetchLibrary = async () => {
+  const { libraries } = await $fetch('/api/libraries')
 }
 ```
 
 Be careful, if you want to call this route on SSR, please read this [section](https://v3.nuxtjs.org/guide/features/data-fetching/#isomorphic-fetch-and-fetch), you must send your browser cookies including your supabase token.
 
 ```ts [pages/index.vue]
-const { data: { librairies }} = await useFetch('/api/librairies', {
+const { data: { libraries }} = await useFetch('/api/libraries', {
   headers: useRequestHeaders(['cookie'])
 })
 ```
