--- a/docs/content/3.usage/1.composables/1.use-supabase-client.md
+++ b/docs/content/3.usage/1.composables/1.use-supabase-client.md
@@ -17,7 +17,7 @@ const client = useSupabaseClient()
 </script>
 ```
 
-## Authentification
+## SignIn
 
 All authentification methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/next/auth-signinwithpassword) Documentation.
 
@@ -51,6 +51,22 @@ Thanks to the [Nuxt plugin](https://v3.nuxtjs.org/docs/directory-structure/plugi
 ::
 
 > Take a look at the [auth middleware](/usage/composables/use-supabase-user#auth-middleware) section to learn how to leverage Nuxt middleware to protect your routes for unauthenticated users.
+
+## SignOut
+
+Check [Supabase Documentation](https://supabase.com/docs/reference/javascript/next/auth-signout) for further details.
+
+By default, after your user is logged out, he will be redirect to the url configured in [`redirect.login`](/get-started#redirect) option. To avoid this behaviour, you can simply set this option to `false`.
+
+```vue
+<template>
+  <button @click="client.auth.signOut()">Logout</button>
+</template>
+
+<script>
+const client = useSupabaseClient()
+</script>
+```
 
 ## Database Request
 
