docs(options): set redirect to false by default

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -75,11 +75,7 @@ Supabase 'service role key', has super admin rights and can bypass your Row Leve
 
 ### `redirect`
 
-Default: `{
-    login: '/',
-    callback: '/'
-  }
-`
+Default: `false`
 
 Supabase redirect options.
 
